@@ -2,6 +2,7 @@ Changes in version 11.1, 10/05/2023
 ===================================
 
 * PreSieve.cpp: Vectorize loop using ARM NEON.
+* popcount.cpp: Add POPCNT algorithm for x64 & AArch64.
 * primesieve.h: Fix -Wstrict-prototypes warning.
 * examples/c/*.c: Fix -Wstrict-prototypes warning.
 * test/*.c: Fix -Wstrict-prototypes warning.
